Breaker 2.1: - Made it compatible with older versions of Java - Implemented Metrics - Added a few advanced states - Added a smart API class - Allowed configs to be recursive - Fixed MythicMobs trigger